--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,10 +13,9 @@ Imports:
     httr2,
     pins,
     purrr,
+    ellmer,
     rlang,
     tibble
-Suggested:
-    ellmer
 RoxygenNote: 7.3.1
 Suggests: 
     testthat (>= 3.0.0)
