--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Imports:
     purrr,
     ellmer,
     rlang,
-    tibble
+    tibble,
+    clipr
 RoxygenNote: 7.3.1
 Suggests: 
     testthat (>= 3.0.0)
