--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,13 @@ Imports:
     ellmer,
     rlang,
     tibble,
-    clipr
+    clipr,
+    ragnar,
+    jsonlite,
+    rvest,
+    R6,
+    stringr,
+    xml2
 RoxygenNote: 7.3.1
 Suggests: 
     testthat (>= 3.0.0)
